--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,14 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+ul {
+  list-style: none;
+}
+.country-list_item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.country-dec {
+  font-weight: 700;
+}
